# optimotu

./: .Rbuildignore  .gitignore  .gitmodules  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  configure  configure.ac  configure.win  optimotu.Rproj  otutools.Rproj
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: RcppExports.R  align.R  calc_subtaxon_thresholds.R  calc_taxon_thresholds.R  config.R  confusion_matrix.R  fmeasure.R  optimize_thresholds.R  optimotu.R  optimotu_package.R  seq_cluster.R  seq_cluster_usearch.R  seq_distmx.R  seq_distmx_usearch.R  seq_search.R  seq_search_usearch.R  single_linkage.R  taxonomy_helpers.R  util.R
benchmark/: cluster_benchmark.R
man/: add_gapstats.Rd  align.Rd  calc_subtaxon_thresholds.Rd  calc_taxon_thresholds.Rd  calculate_cluster_measures.Rd  clean_taxonomy.Rd  closed_ref_cluster.Rd  clust_config.Rd  confusion_matrix.Rd  dist_config.Rd  distmx_cluster.Rd  find_best_threshold.Rd  find_executable.Rd  find_name_col.Rd  find_seq_col.Rd  find_usearch.Rd  fmeasure.Rd  intersect_length.Rd  is_placeholder.Rd  make_seq_names.Rd  mutual_information.Rd  optimize_thresholds.Rd  optimotu.Rd  pairwise_alignment.Rd  parallel_config.Rd  prealign_config.Rd  rank2factor.Rd  select_sequence.Rd  seq_as_char.Rd  seq_cluster.Rd  seq_cluster_usearch.Rd  seq_distmx.Rd  seq_distmx_internal.Rd  seq_distmx_usearch.Rd  seq_names-set.Rd  seq_names.Rd  seq_search.Rd  seq_search_internal.Rd  seq_search_usearch.Rd  sequence_size.Rd  (+8 more)
manuscript/: .gitignore  D1a_FURNEAUX_BRENDAN.Rmd  all.bib  allbibtex.bib  beamer_header.tex  bioinfo.cls  cluster_optimization_figure.Rmd  clustering.tex  clustering0.tex  clustering01-family.tex  clustering02-genera.tex  clustering03-thresholds.tex  clustering04-slink.tex  clustering05-taxonomy.tex  clustering06-cores.tex  clustering07-closed1.tex  clustering08-closed2.tex  clustering09-denovo.tex  figures.Rmd  key.tex  natbib.bst  oikos.Rmd  oikos_bioinfo_workshop.Rmd  optimotu.Rmd  optimotu.tex  optimotu_bioinfo.Rmd  optimotu_predcom.Rmd  phase1.tex  phase2.tex  phase3.tex
src/: AlignClusterWorker.cpp  AlignClusterWorker.h  AllPairGenerator.cpp  AllPairGenerator.h  ClusterAlgorithm.h  ClusterAlgorithmFactory.cpp  ClusterAlgorithmFactory.h  ClusterIndexedMatrix.cpp  ClusterIndexedMatrix.h  ClusterMatrix.cpp  ClusterMatrix.h  ClusterSLINK.cpp  ClusterSLINK.h  ClusterTree.cpp  ClusterTree.h  ClusterWorker.cpp  ClusterWorker.h  DistClusterWorker.cpp  DistWorker.h  DistanceConverter.cpp  DistanceConverter.h  DistanceConverter.hpp  EdlibClusterWorker.cpp  EdlibClusterWorker.h  EdlibDistWorker.cpp  EdlibDistWorker.h  EdlibFilter.cpp  EdlibFilter.h  EdlibSearchWorker.cpp  EdlibSearchWorker.h  HammingClusterWorker.cpp  HammingClusterWorker.h  HammingDistWorker.cpp  HammingDistWorker.h  HammingSearchWorker.cpp  HammingSearchWorker.h  HybridClusterWorker.cpp  HybridClusterWorker.h  HybridSearchWorker.cpp  HybridSearchWorker.h  (+59 more)
tests/: test_single_link.Rbak  test_single_link_multi.R  test_single_link_stepwise.R  testthat.R  time_single_link.Rbak
tests/testthat/: fifo3993281b53243b  test-align.R  test-confusion_matrix.R  test-distmx_clust.R  test-hamming.R  test-seq_distmx.R  test-summarize_by_rank.R  test-tiny_cluster.R
